[bumpversion]
current_version = 1.1.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:event_service_utils/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[wheel]
universal = 1

[flake8]
exclude = docs tests

[metadata]
description-file = README.md

